com.rockwellcollins.atc.meta.lute/src/com/rockwellcollins/atc/meta/lute/LuteParser.java
// $ANTLR 3.4 F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g 2013-08-31 12:43:08

  package com.rockwellcollins.atc.meta.lute;
  
  import java.util.Arrays;
  import org.slf4j.Logger;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class LuteParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DIGIT", "ID", "INT", "LETTER", "REAL", "SPECIAL", "STRING", "WS", "'!='", "'('", "')'", "'*'", "'+'", "','", "'-'", "':='", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'\\/'", "'^'", "'and'", "'check'", "'do'", "'else'", "'end'", "'false'", "'for'", "'foreach'", "'if'", "'in'", "'not'", "'or'", "'print'", "'then'", "'theorem'", "'true'", "'{'", "'|'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int COMMENT=4;
    public static final int DIGIT=5;
    public static final int ID=6;
    public static final int INT=7;
    public static final int LETTER=8;
    public static final int REAL=9;
    public static final int SPECIAL=10;
    public static final int STRING=11;
    public static final int WS=12;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public LuteParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LuteParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return LuteParser.tokenNames; }
    public String getGrammarFileName() { return "F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g"; }


      private Logger log;
      
      public LuteParser(TokenStream input, Logger log) {
        this(input);
        this.log = log;
      }
      
      @Override
      public void emitErrorMessage(String msg) {
        if (log == null) {
            throw new LuteException( msg );
        } 

        log.error(msg);
      }



    // $ANTLR start "rule"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:77:1: rule returns [List<Command> cmds] : ( command )* ;
    public final List<Command> rule() throws RecognitionException {
        List<Command> cmds = null;


        Command command1 =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:78:3: ( ( command )* )
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:78:5: ( command )*
            {
             cmds = new ArrayList<Command>(); 

            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:79:5: ( command )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==43) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:79:6: command
            	    {
            	    pushFollow(FOLLOW_command_in_rule66);
            	    command1=command();

            	    state._fsp--;


            	     cmds.add(command1); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cmds;
    }
    // $ANTLR end "rule"



    // $ANTLR start "command"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:82:1: command returns [Command c] : ( 'theorem' ID stmt 'end' ';' | ID ':=' expr ';' |fn= ID '(' arg= ID ( ',' arg= ID )* ')' ':=' expr ';' );
    public final Command command() throws RecognitionException {
        Command c = null;


        Token fn=null;
        Token arg=null;
        Token ID2=null;
        Token ID4=null;
        Stmt stmt3 =null;

        Expr expr5 =null;

        Expr expr6 =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:83:3: ( 'theorem' ID stmt 'end' ';' | ID ':=' expr ';' |fn= ID '(' arg= ID ( ',' arg= ID )* ')' ':=' expr ';' )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==43) ) {
                alt3=1;
            }
            else if ( (LA3_0==ID) ) {
                int LA3_2 = input.LA(2);

                if ( (LA3_2==20) ) {
                    alt3=2;
                }
                else if ( (LA3_2==14) ) {
                    alt3=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 2, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:83:5: 'theorem' ID stmt 'end' ';'
                    {
                    match(input,43,FOLLOW_43_in_command87); 

                    ID2=(Token)match(input,ID,FOLLOW_ID_in_command89); 

                    pushFollow(FOLLOW_stmt_in_command91);
                    stmt3=stmt();

                    state._fsp--;


                    match(input,33,FOLLOW_33_in_command93); 

                    match(input,21,FOLLOW_21_in_command95); 

                     c = new Theorem((ID2!=null?ID2.getText():null), stmt3); 

                    }
                    break;
                case 2 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:85:5: ID ':=' expr ';'
                    {
                    ID4=(Token)match(input,ID,FOLLOW_ID_in_command107); 

                    match(input,20,FOLLOW_20_in_command109); 

                    pushFollow(FOLLOW_expr_in_command111);
                    expr5=expr();

                    state._fsp--;


                    match(input,21,FOLLOW_21_in_command113); 

                     c = new Assignment((ID4!=null?ID4.getText():null), expr5); 

                    }
                    break;
                case 3 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:87:5: fn= ID '(' arg= ID ( ',' arg= ID )* ')' ':=' expr ';'
                    {
                     ArrayList<String> args = new ArrayList<String>(); 

                    fn=(Token)match(input,ID,FOLLOW_ID_in_command133); 

                    match(input,14,FOLLOW_14_in_command135); 

                    arg=(Token)match(input,ID,FOLLOW_ID_in_command139); 

                     args.add((arg!=null?arg.getText():null)); 

                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:89:15: ( ',' arg= ID )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==18) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:89:16: ',' arg= ID
                    	    {
                    	    match(input,18,FOLLOW_18_in_command158); 

                    	    arg=(Token)match(input,ID,FOLLOW_ID_in_command162); 

                    	     args.add((arg!=null?arg.getText():null)); 

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    match(input,15,FOLLOW_15_in_command168); 

                    match(input,20,FOLLOW_20_in_command170); 

                    pushFollow(FOLLOW_expr_in_command172);
                    expr6=expr();

                    state._fsp--;


                    match(input,21,FOLLOW_21_in_command174); 

                     c = new FunctionDefinition((fn!=null?fn.getText():null), args, expr6); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return c;
    }
    // $ANTLR end "command"



    // $ANTLR start "stmt"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:93:1: stmt returns [Stmt s] : ( 'foreach' ID 'in' expr 'do' body= stmt | 'check' expr ';' | ID ':=' expr ';' body= stmt | 'print' d= expr ( ',' d= expr )* ';' body= stmt );
    public final Stmt stmt() throws RecognitionException {
        Stmt s = null;


        Token ID7=null;
        Token ID10=null;
        Stmt body =null;

        Expr d =null;

        Expr expr8 =null;

        Expr expr9 =null;

        Expr expr11 =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:94:3: ( 'foreach' ID 'in' expr 'do' body= stmt | 'check' expr ';' | ID ':=' expr ';' body= stmt | 'print' d= expr ( ',' d= expr )* ';' body= stmt )
            int alt5=4;
            switch ( input.LA(1) ) {
            case 36:
                {
                alt5=1;
                }
                break;
            case 30:
                {
                alt5=2;
                }
                break;
            case ID:
                {
                alt5=3;
                }
                break;
            case 41:
                {
                alt5=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:94:5: 'foreach' ID 'in' expr 'do' body= stmt
                    {
                    match(input,36,FOLLOW_36_in_stmt197); 

                    ID7=(Token)match(input,ID,FOLLOW_ID_in_stmt199); 

                    match(input,38,FOLLOW_38_in_stmt201); 

                    pushFollow(FOLLOW_expr_in_stmt203);
                    expr8=expr();

                    state._fsp--;


                    match(input,31,FOLLOW_31_in_stmt205); 

                    pushFollow(FOLLOW_stmt_in_stmt209);
                    body=stmt();

                    state._fsp--;


                     s = new ForeachStmt((ID7!=null?ID7.getText():null), expr8, body); 

                    }
                    break;
                case 2 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:96:5: 'check' expr ';'
                    {
                    match(input,30,FOLLOW_30_in_stmt221); 

                    pushFollow(FOLLOW_expr_in_stmt223);
                    expr9=expr();

                    state._fsp--;


                    match(input,21,FOLLOW_21_in_stmt225); 

                     s = new CheckStmt(expr9); 

                    }
                    break;
                case 3 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:98:5: ID ':=' expr ';' body= stmt
                    {
                    ID10=(Token)match(input,ID,FOLLOW_ID_in_stmt237); 

                    match(input,20,FOLLOW_20_in_stmt239); 

                    pushFollow(FOLLOW_expr_in_stmt241);
                    expr11=expr();

                    state._fsp--;


                    match(input,21,FOLLOW_21_in_stmt243); 

                    pushFollow(FOLLOW_stmt_in_stmt247);
                    body=stmt();

                    state._fsp--;


                     s = new LetStmt((ID10!=null?ID10.getText():null), expr11, body); 

                    }
                    break;
                case 4 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:100:5: 'print' d= expr ( ',' d= expr )* ';' body= stmt
                    {
                     ArrayList<Expr> exprs = new ArrayList<Expr>(); 

                    match(input,41,FOLLOW_41_in_stmt265); 

                    pushFollow(FOLLOW_expr_in_stmt269);
                    d=expr();

                    state._fsp--;


                     exprs.add(d); 

                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:102:7: ( ',' d= expr )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==18) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:102:8: ',' d= expr
                    	    {
                    	    match(input,18,FOLLOW_18_in_stmt280); 

                    	    pushFollow(FOLLOW_expr_in_stmt284);
                    	    d=expr();

                    	    state._fsp--;


                    	     exprs.add(d); 

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    match(input,21,FOLLOW_21_in_stmt291); 

                    pushFollow(FOLLOW_stmt_in_stmt299);
                    body=stmt();

                    state._fsp--;


                     s = new PrintStmt(exprs, body); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return s;
    }
    // $ANTLR end "stmt"



    // $ANTLR start "expr"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:107:1: expr returns [Expr e] : ( predicate | 'if' c= predicate 'then' t= predicate 'else' f= predicate );
    public final Expr expr() throws RecognitionException {
        Expr e = null;


        Expr c =null;

        Expr t =null;

        Expr f =null;

        Expr predicate12 =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:108:3: ( predicate | 'if' c= predicate 'then' t= predicate 'else' f= predicate )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0 >= ID && LA6_0 <= INT)||LA6_0==REAL||LA6_0==STRING||LA6_0==14||LA6_0==34||LA6_0==39||(LA6_0 >= 44 && LA6_0 <= 45)) ) {
                alt6=1;
            }
            else if ( (LA6_0==37) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:108:5: predicate
                    {
                    pushFollow(FOLLOW_predicate_in_expr322);
                    predicate12=predicate();

                    state._fsp--;


                     e = predicate12; 

                    }
                    break;
                case 2 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:109:5: 'if' c= predicate 'then' t= predicate 'else' f= predicate
                    {
                    match(input,37,FOLLOW_37_in_expr330); 

                    pushFollow(FOLLOW_predicate_in_expr334);
                    c=predicate();

                    state._fsp--;


                    match(input,42,FOLLOW_42_in_expr336); 

                    pushFollow(FOLLOW_predicate_in_expr340);
                    t=predicate();

                    state._fsp--;


                    match(input,32,FOLLOW_32_in_expr342); 

                    pushFollow(FOLLOW_predicate_in_expr346);
                    f=predicate();

                    state._fsp--;


                     e = new IfExpr(c, t, f); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "expr"



    // $ANTLR start "predicate"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:113:1: predicate returns [Expr e] : l= neg_predicate ( 'and' r= neg_predicate | 'or' r= neg_predicate )* ;
    public final Expr predicate() throws RecognitionException {
        Expr e = null;


        Expr l =null;

        Expr r =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:114:3: (l= neg_predicate ( 'and' r= neg_predicate | 'or' r= neg_predicate )* )
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:114:5: l= neg_predicate ( 'and' r= neg_predicate | 'or' r= neg_predicate )*
            {
            pushFollow(FOLLOW_neg_predicate_in_predicate371);
            l=neg_predicate();

            state._fsp--;


             e = l; 

            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:115:5: ( 'and' r= neg_predicate | 'or' r= neg_predicate )*
            loop7:
            do {
                int alt7=3;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==29) ) {
                    alt7=1;
                }
                else if ( (LA7_0==40) ) {
                    alt7=2;
                }


                switch (alt7) {
            	case 1 :
            	    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:115:6: 'and' r= neg_predicate
            	    {
            	    match(input,29,FOLLOW_29_in_predicate380); 

            	    pushFollow(FOLLOW_neg_predicate_in_predicate384);
            	    r=neg_predicate();

            	    state._fsp--;


            	     e = new AndExpr(e, r); 

            	    }
            	    break;
            	case 2 :
            	    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:116:6: 'or' r= neg_predicate
            	    {
            	    match(input,40,FOLLOW_40_in_predicate395); 

            	    pushFollow(FOLLOW_neg_predicate_in_predicate399);
            	    r=neg_predicate();

            	    state._fsp--;


            	     e = new OrExpr(e, r); 

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "predicate"



    // $ANTLR start "neg_predicate"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:119:1: neg_predicate returns [Expr e] : ( 'not' n= neg_predicate |a= atomic_predicate );
    public final Expr neg_predicate() throws RecognitionException {
        Expr e = null;


        Expr n =null;

        Expr a =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:120:3: ( 'not' n= neg_predicate |a= atomic_predicate )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==39) ) {
                alt8=1;
            }
            else if ( ((LA8_0 >= ID && LA8_0 <= INT)||LA8_0==REAL||LA8_0==STRING||LA8_0==14||LA8_0==34||(LA8_0 >= 44 && LA8_0 <= 45)) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }
            switch (alt8) {
                case 1 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:120:5: 'not' n= neg_predicate
                    {
                    match(input,39,FOLLOW_39_in_neg_predicate420); 

                    pushFollow(FOLLOW_neg_predicate_in_neg_predicate424);
                    n=neg_predicate();

                    state._fsp--;


                     e = new NotExpr(n); 

                    }
                    break;
                case 2 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:121:5: a= atomic_predicate
                    {
                    pushFollow(FOLLOW_atomic_predicate_in_neg_predicate434);
                    a=atomic_predicate();

                    state._fsp--;


                     e = a; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "neg_predicate"



    // $ANTLR start "atomic_predicate"
    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:124:1: atomic_predicate returns [Expr e] : l= term (op= ( '=' | '>' | '<' | '>=' | '<=' | '!=' ) r= term )? ;
    public final Expr atomic_predicate() throws RecognitionException {
        Expr e = null;


        Token op=null;
        Expr l =null;

        Expr r =null;


        try {
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:125:3: (l= term (op= ( '=' | '>' | '<' | '>=' | '<=' | '!=' ) r= term )? )
            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:125:5: l= term (op= ( '=' | '>' | '<' | '>=' | '<=' | '!=' ) r= term )?
            {
            pushFollow(FOLLOW_term_in_atomic_predicate455);
            l=term();

            state._fsp--;


             e = l; 

            // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:126:5: (op= ( '=' | '>' | '<' | '>=' | '<=' | '!=' ) r= term )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==13||(LA9_0 >= 22 && LA9_0 <= 26)) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // F:\\Projets\\framework\\dev\\constraints\\lute\\com.rockwellcollins.atc.meta.lute\\src\\com\\rockwellcollins\\atc\\meta\\lute\\Lute.g:126:6: op= ( '=' | '>' | '<' | '>=' | '<=' | '!=' ) r= term
                    {
                    op=(Token)input.LT(1);

                    if ( input.LA(1)==13||(input.LA(1) >= 22 && input.LA(1) <= 26) ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    pushFollow(FOLLOW_term_in_atomic_predicate492);
                    r=term();

                    state._fsp--;


                     e = new FnCallExpr(op.getText(), Arrays.asList(e, r)); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return e;
    }
    // $ANTLR end "atomic_predicate"



    // $ANTLR start "term"
